<!--
  ~ Copyright (c) 2015. Juraj Palaščák
  ~ All rights Reserved
  -->

<resources>
    <string name="app_name">CS to GO</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_new_match">New Match</string>
    <string name="card_map_pic_desc">Map Picture</string>
    <string name="card_kills_title">Kills</string>
    <string name="card_assists_title">Assists</string>
    <string name="card_deaths_title">Deaths</string>
    <string name="kill_assists_slash_death">KA/D</string>
    <string name="kill_slash_death">K/D</string>
    <string name="total_kills">Total Kills</string>
    <string name="win_percentage">Win %</string>
    <string name="headshot_percentage">Headshot %</string>
    <string name="accuracy">Accuracy</string>
    <string name="kd_ratio_number">0.00</string>
    <string name="powered_by_steam">powered by Steam - http://www.steampowered.com</string>
    <string name="best_maps_title">Best MM Maps</string>
    <string name="dash">-</string>
    <string name="web_wep_best_accuracy">accuracy</string>
    <string name="web_wep_most_kills">kills</string>
    <string name="web_wep_most_hits">hits</string>
    <string name="web_wep_most_shots">shots</string>
    <string name="web_best_weapons_title">Best Weapons</string>
    <string name="web_map_most_rounds">rounds</string>
    <string name="web_map_most_wins">wins</string>
    <string name="web_map_best_win_percentage">win%</string>

    <string-array name="maps_array">
        <item>de_dust2</item>
        <item>de_train</item>
        <item>de_mirage</item>
        <item>de_inferno</item>
        <item>de_cbble</item>
        <item>de_overpass</item>
        <item>de_cache</item>
        <item>de_rails</item>
        <item>de_resort</item>
        <item>de_zoo</item>
        <item>de_log</item>
        <item>de_season</item>
        <item>cs_agency</item>
        <item>de_aztec</item>
        <item>de_dust</item>
        <item>de_vertigo</item>
        <item>de_nuke</item>
        <item>cs_office</item>
        <item>cs_italy</item>
        <item>cs_assault</item>
        <item>cs_militia</item>
    </string-array>

    <string name="title_activity_smokes">Smokes</string>
    <string name="pic_of_smoke_thumb_desc">Picture of smoke, thumbnail</string>
    <string name="title_activity_view_image">ViewImageActivity</string>

    <string name="close">Close</string>

    <string name="header_style">Style</string>
    <string name="header_steam">Steam</string>
    <string name="header_license">Licenses</string>
    <string name="header_author">Info</string>

    <string name="extra_category">category</string>
    <string name="category_style">category_style</string>
    <string name="category_steam">category_steam</string>

    <string name="pref_style_matchpage_default">small_card</string>
    <string name="pref_style_tinting_default">indigo_red</string>

    <string name="title_activity_settings">Settings</string>
    <string name="web_stats_steam_avatar">Steam Avatar</string>
    <string name="steam_web_stats_no_id_image_description">Image helper for finding steam ID</string>
    <string name="fragment_smokes_row_image_of_map_desc">Image of map</string>


    <string name="match_stats_no_matches_stub_info">This screen shows basic statistics from matches you added. Feel free to add some from previous screen.</string>
    <string name="kad_kd">KA/D - K/D</string>
    <string name="match_stats_per_match">per match</string>
    <string name="match_stats_avg_kills">avg kills</string>
    <string name="match_stats_avg_assists">avg assists</string>
    <string name="match_stats_avg_deaths">avg deaths</string>
    <string name="match_stats_avg_ppm">avg points</string>
    <string name="match_stats_no_matches">matches</string>
    <string name="match_stats_wins_draws_loses">w:d:l</string>
    <string name="match_stats_kills">kills</string>
    <string name="match_stats_assists">assists</string>
    <string name="match_stats_deaths">deaths</string>
    <string name="match_stats_points">points</string>

    <string name="steam_web_stats_webmap_best_map_pic_desc">Picture of a best map</string>
    <string name="steam_web_stats_webgun_best_gun_pic_desc">Picture of a best gun</string>

    <string name="gosu_current_header">Live Matches</string>
    <string name="gosu_upcoming_header">Upcoming Matches</string>
    <string name="gosu_played_header">Recent Results</string>

    <string name="congratulations">congratulations!</string>
    <string name="title_activity_smokes_help">Help With Smokes</string>

    <string name="data_from_gosu">data from - http://www.gosugamers.net/</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
