<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:title="@string/header_style"
        android:icon="@drawable/ic_palette_grey600_24dp"
        android:fragment="com.palascak.android.cstogo.fragments.PrefsFragment" >
        <extra
            android:name="category"
            android:value="@string/category_style" />
    </header>
    <header
        android:title="@string/header_steam"
        android:icon="@drawable/ic_steam_grey600_24dp"
        android:fragment="com.palascak.android.cstogo.fragments.PrefsFragment" >
        <extra
            android:name="category"
            android:value="@string/category_steam" />
    </header>
    <header
        android:title="@string/header_license"
        android:icon="@drawable/ic_link_grey600_24dp"
        android:fragment="com.palascak.android.cstogo.fragments.LicenceFragment" >
    </header>
    <header
        android:title="@string/header_author"
        android:icon="@drawable/ic_link_grey600_24dp"
        android:fragment="com.palascak.android.cstogo.fragments.InfoFragment" >
    </header>
</preference-headers>