<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="2dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/card_map_pic"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/black"
            android:scaleType="centerCrop"
            android:contentDescription="@string/card_map_pic_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_match_result"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/card_kad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-thin"
            android:layout_below="@id/card_match_result"
            android:layout_alignLeft="@+id/card_match_result"
            android:textColor="@android:color/white"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/card_map_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#AAFFFFFF"
            android:textSize="12sp"
            android:layout_alignBottom="@+id/card_map_pic"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingBottom="3dp"
            android:paddingRight="8dp"
            tools:ignore="RelativeOverlap,RtlHardcoded,RtlSymmetry"/>

        <ImageView
            android:id="@+id/card_strip"
            android:layout_width="3dp"
            android:layout_height="40dp"
            android:background="@color/accent"
            tools:ignore="ContentDescription"
            android:layout_below="@+id/card_map_pic"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_kills_title"
            android:text="@string/card_kills_title"
            android:textColor="@color/accent"
            android:layout_below="@+id/card_map_pic"
            android:layout_alignLeft="@+id/card_kad"
            android:layout_alignStart="@+id/card_kad"
            android:layout_marginTop="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_assists_title"
            android:textColor="@color/accent"
            android:id="@+id/card_assists_title"
            android:layout_alignTop="@+id/card_kills_title"
            android:layout_toRightOf="@+id/card_kills_title"
            android:layout_toEndOf="@+id/card_kills_title"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_deaths_title"
            android:textColor="@color/accent"
            android:id="@+id/card_deaths_title"
            android:layout_alignTop="@+id/card_kills_title"
            android:layout_toRightOf="@+id/card_assists_title"
            android:layout_toEndOf="@+id/card_assists_title"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_kills"
            android:textColor="#263238"
            android:textStyle="bold"
            android:layout_alignBottom="@+id/card_kills_title"
            android:layout_toRightOf="@+id/card_kills_title"
            android:layout_toEndOf="@+id/card_kills_title"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_assists"
            android:textColor="#263238"
            android:textStyle="bold"
            android:layout_alignBottom="@+id/card_assists_title"
            android:layout_toRightOf="@+id/card_assists_title"
            android:layout_toEndOf="@+id/card_assists_title"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_deaths"
            android:textColor="#263238"
            android:textStyle="bold"
            android:layout_alignBottom="@+id/card_deaths_title"
            android:layout_toRightOf="@+id/card_deaths_title"
            android:layout_toEndOf="@+id/card_deaths_title"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>


    </RelativeLayout>
</android.support.v7.widget.CardView>