<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.cstogo.fragments.FragmentB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ViewStub
            android:id="@+id/match_stats_stub_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:inflatedId="@+id/match_stats_no_matches_import"
            android:layout="@layout/match_stats_no_matches_id" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="0dp"
            card_view:cardBackgroundColor="?cardBack"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/stats_number_avgKAD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="5.50"
                        android:fontFamily="sans-serif-light"
                        android:layout_gravity="center"
                        android:textColor="?accentColor"
                        android:textSize="40sp"/>

                    <TextView
                        android:id="@+id/stats_number_avgKD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3.50"
                        android:fontFamily="sans-serif-light"
                        android:layout_gravity="center"
                        android:textColor="?fab_colorRipple"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kad_kd"
                        android:fontFamily="sans-serif-light"
                        android:layout_gravity="center"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/match_stats_per_match"
                        android:fontFamily="sans-serif-light"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/stats_title_avgKills"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/match_stats_avg_kills"
                        android:textColor="?accentColor"
                        android:fontFamily="sans-serif-light"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"/>

                    <TextView
                        android:id="@+id/stats_number_avgKills"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3.50"
                        android:layout_below="@+id/stats_title_avgKills"
                        android:layout_alignLeft="@+id/stats_title_avgKills"
                        android:layout_alignStart="@+id/stats_title_avgKills"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"/>

                    <TextView
                        android:id="@+id/stats_title_avgAssists"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/match_stats_avg_assists"
                        android:textColor="?accentColor"
                        android:fontFamily="sans-serif-light"
                        android:layout_below="@+id/stats_number_avgKills"
                        android:layout_alignLeft="@+id/stats_title_avgKills"
                        android:layout_alignStart="@+id/stats_title_avgKills" />

                    <TextView
                        android:id="@+id/stats_number_avgAssists"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3.50"
                        android:layout_below="@+id/stats_title_avgAssists"
                        android:layout_alignLeft="@+id/stats_number_avgKills"
                        android:layout_alignStart="@+id/stats_number_avgKills" />

                    <TextView
                        android:id="@+id/stats_title_avgDeaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/match_stats_avg_deaths"
                        android:textColor="?accentColor"
                        android:fontFamily="sans-serif-light"
                        android:layout_alignTop="@+id/stats_title_avgKills"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/stats_number_avgDeaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3.50"
                        android:layout_below="@+id/stats_title_avgDeaths"
                        android:layout_alignRight="@+id/stats_title_avgDeaths"
                        android:layout_alignEnd="@+id/stats_title_avgDeaths"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/stats_title_avgPPM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/match_stats_avg_ppm"
                        android:textColor="?accentColor"
                        android:fontFamily="sans-serif-light"
                        android:layout_alignTop="@+id/stats_title_avgAssists"
                        android:layout_alignRight="@+id/stats_title_avgDeaths"
                        android:layout_alignEnd="@+id/stats_title_avgDeaths" />

                    <TextView
                        android:id="@+id/stats_number_avgPPM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3.50"
                        android:layout_below="@+id/stats_title_avgPPM"
                        android:layout_alignRight="@+id/stats_number_avgDeaths"
                        android:layout_alignEnd="@+id/stats_number_avgDeaths" />

                </RelativeLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/stats_title_matches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Matches"
            android:textColor="?accentColor" />

        <TextView
            android:id="@+id/stats_number_matches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            tools:text="3.50"/>

        <TextView
            android:id="@+id/stats_title_kills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Kills"
            android:textColor="?accentColor" />

        <TextView
            android:id="@+id/stats_number_kills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            tools:text="3.50" />

        <TextView
            android:id="@+id/stats_title_assists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Assists"
            android:textColor="?accentColor" />

        <TextView
            android:id="@+id/stats_number_assists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            tools:text="3.50" />

        <TextView
            android:id="@+id/stats_title_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Deaths"
            android:textColor="?accentColor" />

        <TextView
            android:id="@+id/stats_number_deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            tools:text="3.50" />

        <TextView
            android:id="@+id/stats_title_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Points"
            android:textColor="?accentColor" />

        <TextView
            android:id="@+id/stats_number_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            tools:text="3.50" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="0dp"
            card_view:cardBackgroundColor="?cardBack"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="15dp"
            android:clickable="false">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/stats_map_pie"
                android:layout_width="match_parent"
                android:layout_height="270dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="0dp"
            card_view:cardBackgroundColor="?cardBack"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="15dp"
            android:clickable="false">

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/stats_kad_bar"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/stats_title_dust_KAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dust KaD"
            android:textColor="?accentColor" />

        <TextView
            android:id="@+id/stats_number_dust_KAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            tools:text="3.50" />

        <TextView
            android:id="@+id/stats_title_nuke_KAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nuke KaD"
            android:textColor="?accentColor" />

        <TextView
            android:id="@+id/stats_number_nuke_KAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            tools:text="3.50" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="0dp"
            card_view:cardBackgroundColor="?cardBack"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="15dp">

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/stats_last3_bar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:visibility="gone" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
